--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -13,5 +13,10 @@ jobs:
         uses: actions/checkout@v1
       - name: Build
         run: make build
-      - name: Start env
+  start:
+    runs-on: ubuntu-latest
+    steps:
+      - name: checkout repo
+        uses: actions/checkout@v1
+      - name: Start
         run: make run
