--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -14,6 +14,7 @@ jobs:
       - name: Build
         run: make build
   start:
+    needs: build
     runs-on: ubuntu-latest
     steps:
       - name: checkout repo
