--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -6,7 +6,7 @@ on:
     branches: [main]
 
 jobs:
-  build and test:
+  build-and-test:
     runs-on: ubuntu-latest
     steps:
       - name: checkout repo
